# multisweep

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  LICENSE  MultiSweep.jucer  NewProject.jucer  README.md  init.sh
.github/workflows/: build_test.yml
MultiSweep/: CMakeLists.txt
MultiSweep/Lib/: CMakeLists.txt
MultiSweep/Lib/find-peaks/: CMakeLists.txt
MultiSweep/Source/: FilterApproximation.cpp  FilterApproximation.h  FreqResponseDisplay.h  ImpulseResponse.h  LogSweep.cpp  LogSweep.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SingleChannelIOWidget.h  Sweep.cpp  Sweep.h  SweepAudioSource.cpp  SweepAudioSource.h  SweepComponentEditor.h  SweepComponentProcessor.cpp  SweepComponentProcessor.h  SweepEditorContainer.h  fft.cpp  fft.h
MultiSweep/Test/: CMakeLists.txt  FilterParameterTest.cpp  Main.cpp  SaveAudioFiles.cpp  SweepTest.cpp
Python/: myplot.py
Source/: FilterApproximation.h  FreqResponseDisplay.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SingleChannelIOWidget.h
Test/: CMakeLists.txt  FilterParameterTest.cpp  SaveAudioFiles.cpp  SweepTest.cpp
font/: CMakeLists.txt
iem/: CMakeLists.txt  IEM_LaF.cpp  IEM_LaF.h
matlab/: FilterApproximation.m  sweeptest.csv
resources/: AmbisonicDecoder.h  AudioProcessorBase.h  Delay.h  FeedbackDelayNetwork.h  LabelAttachment.h  MatrixMultiplication.h  MultiChannelDelay.h  Quaternion.h  efficientSHvanilla.h
resources/OSC/: OSCInputStream.h  OSCParameterInterface.cpp  OSCParameterInterface.h  OSCStatus.cpp  OSCUtilities.h
resources/Standalone/: IEM_AudioDeviceSelectorComponent.h  MyStandaloneFilterWindow.h  StandaloneApp.cpp
resources/customComponents/: CompressorVisualizer.h  LevelMeter.h  MailBox.h  OnOffButton.h  ReverseSlider.h  RoundButton.h  SimpleLabel.h  SpherePanner.h  TitleBar.h
resources/lookAndFeel/: IEM_LaF.h
src/: CMakeLists.txt  FFT.cpp  FFT.h  FreqResponseDisplay.cpp  FreqResponseDisplay.h  IEM_LaF.h  ImpulseResponse.h  LogSweep.cpp  LogSweep.h  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StereoPluginBase.h  SweepComponentEditor.h  SweepComponentProcessor.h  fft.cpp  fft.h
src/SweepComponent/: CMakeLists.txt  SweepComponentEditor.cpp  SweepComponentEditor.h  SweepComponentProcessor.cpp  SweepComponentProcessor.h
src/plugin/: CMakeLists.txt  PluginEditor.cpp
test/: CMakeLists.txt  FilterParameterTest.cpp  SweepTest.cpp
